--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-intersection-observer": "^10.0.0",
     "react-player": "^3.4.0",
     "react-router-dom": "^7.10.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^3.6.0",
     "socket.io-client": "^4.8.3",
     "yup": "^1.7.1"
