--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8000
-VITE_API_URL=http://localhost:8000/api
+VITE_API_BASE_URL=https://show-us-your-talent-backend-1.onrender.com/
+VITE_API_URL=https://show-us-your-talent-backend-1.onrender.com/api
